--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "db:generate": "drizzle-kit generate",
     "db:push": "drizzle-kit push",
     "typecheck": "tsc -p tsconfig.json --noEmit",
-    "build:fe": "parcel './src/frontend/*.html'"
+    "start:fe": "vite build --watch",
+    "build:fe": "vite build"
   },
   "dependencies": {
     "@hono/node-server": "^1.18.2",
@@ -23,9 +24,10 @@
     "@types/better-sqlite3": "^7.6.13",
     "@types/node": "^20.11.17",
     "drizzle-kit": "^0.31.4",
-    "parcel": "^2.15.4",
-    "tsx": "^4.7.1",
-    "typescript": "^5.8.3"
+    "tsc": "^2.0.4",
+    "tsx": "^4.20.4",
+    "typescript": "^5.8.3",
+    "vite": "^7.1.3"
   },
   "packageManager": "yarn@1.22.22+sha1.ac34549e6aa8e7ead463a7407e1c7390f61a6610"
 }
