--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
     "start": "vite build && tsx watch src/index.tsx",
     "db:generate": "drizzle-kit generate",
     "db:push": "drizzle-kit push",
+    "db:seed": "tsx src/db/seed.ts",
+    "db:seed-products": "tsx src/db/seed-products.ts",
     "typecheck": "tsc -p tsconfig.json --noEmit",
     "start:fe": "vite build --watch",
     "build:fe": "vite build"
