--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,7 @@
     "outDir": "./dist",
     "allowImportingTsExtensions": true,
     "noEmit": true,
+    "resolveJsonModule": true
   },
   "exclude": ["node_modules"]
 }
