checkpoint: seed conversations

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "db:push": "drizzle-kit push",
     "db:seed": "tsx src/db/seed.ts",
     "db:seed-products": "tsx src/db/seed-products.ts",
+    "db:seed-conversations": "tsx src/db/seed-conversations.ts",
     "typecheck": "tsc -p tsconfig.json --noEmit",
     "start:fe": "vite build --watch",
     "build:fe": "vite build"
