checkpoint: rate limiter

--- a/package.json
+++ b/package.json
@@ -9,6 +9,11 @@
     "db:seed-products": "tsx src/db/seed-products.ts",
     "db:seed-conversations": "tsx src/db/seed-conversations.ts",
     "test:ai-tool": "tsx src/test-tool.ts",
+    "test:rate-limit": "tsx test-rate-limit.ts",
+    "test:rate-limit:all": "tsx test-rate-limit.ts --all",
+    "test:rate-limit:ips": "tsx test-rate-limit.ts --ips",
+    "test:rate-limit:headers": "tsx test-rate-limit.ts --headers",
+    "test:rate-limit:performance": "tsx test-rate-limit.ts --performance",
     "typecheck": "tsc -p tsconfig.json --noEmit",
     "start:fe": "vite build --watch",
     "build:fe": "vite build"
@@ -19,6 +24,7 @@
     "better-sqlite3": "^9.4.0",
     "drizzle-orm": "^0.36.0",
     "hono": "^4.9.2",
+    "hono-rate-limiter": "^0.4.2",
     "openai": "^5.12.2",
     "uuid": "^11.1.0",
     "workers-ai-provider": "^0.7.5",
