--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
     "db:seed-conversations": "tsx src/db/seed-conversations.ts",
     "typecheck": "tsc -p tsconfig.json --noEmit",
     "start:fe": "vite build --watch",
-    "build:fe": "vite build"
+    "build:fe": "vite build",
+    "test:e2e": "playwright test",
+    "test:e2e:ui": "playwright test --ui",
+    "test:e2e:debug": "playwright test --debug",
+    "test:e2e:report": "playwright show-report"
   },
   "dependencies": {
     "@hono/node-server": "^1.18.2",
@@ -26,6 +30,7 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@playwright/test": "^1.55.0",
     "@types/better-sqlite3": "^7.6.13",
     "@types/node": "^20.11.17",
     "drizzle-kit": "^0.31.4",
