--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
     "module": "nodenext",
     "strict": true,
     "skipLibCheck": true,
-    "types": ["node"],
+    "types": ["node", "@playwright/test"],
     "jsx": "react-jsx",
     "jsxImportSource": "hono/jsx",
     "outDir": "./dist",
