--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "test:e2e:report": "playwright show-report"
   },
   "dependencies": {
+    "@ai-sdk/openai-compatible": "^1.0.10",
     "@hono/node-server": "^1.18.2",
-    "ai": "4.3.19",
+    "@openrouter/ai-sdk-provider": "^1.1.2",
+    "ai": "^5.0.20",
     "better-sqlite3": "^9.4.0",
     "drizzle-orm": "^0.36.0",
     "hono": "^4.9.2",
