checkpoint: markdown content

--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
     "@ai-sdk/openai-compatible": "^1.0.10",
     "@hono/node-server": "^1.18.2",
     "@openrouter/ai-sdk-provider": "^1.1.2",
+    "@types/marked": "^6.0.0",
     "ai": "^5.0.20",
     "better-sqlite3": "^9.4.0",
     "drizzle-orm": "^0.36.0",
     "hono": "^4.9.2",
     "hono-rate-limiter": "^0.4.2",
+    "marked": "^16.2.0",
     "openai": "^5.12.2",
     "react-hot-toast": "^2.6.0",
     "uuid": "^11.1.0",
