--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "test:e2e:report": "playwright show-report"
   },
   "dependencies": {
+    "@ai-sdk/google": "^2.0.8",
     "@ai-sdk/openai-compatible": "^1.0.10",
     "@hono/node-server": "^1.18.2",
     "@openrouter/ai-sdk-provider": "^1.1.2",
