checkpoint: updating env

--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,6 @@ CLOUDFLARE_WORKER_AI_TOKEN=
 CLOUDFLARE_ACCOUNT_ID=
 ADMIN_USERNAME= 
 ADMIN_PASSWORD= 
+LOCAL_LLM_API_KEY=
+LOCAL_LLM_BASE_URL=
+GOOGLE_AI_API_KEY=
